--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                             <a class="nav-link" href="#work">Work</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
+                            <a class="nav-link" href="#footer">Contact</a>
                         </li>
                         <li class="nav-item resume">
                             <a class="nav-link" href="https://olaolu.dev/">Resume</a>
@@ -195,7 +195,7 @@
 
     </section>
     <section id="footer" class="section1">
-        <h1 data-tilt class="big-heading">Contact Me</h1>
+        <h1 class="big-heading">Contact Me</h1>
         <a href="index.html"> <i class="fa-brands fa-twitter"></i></a>
         <a href="index.html"> <i class="fa-brands fa-facebook"></i></a>
         <a href="index.html"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
@@ -207,7 +207,7 @@
 
 
         <script src="vanilla-tilt.js"></script>
-        <script src="index.js"></script>
+
 </body>
 
 </html>
