Remove unnecessary tilt cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
 
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <div data-tilt data-tilt-scale="1.1" class="card" id="project1" onmouseover="mouseOver()"
+                    <div data-tilt  class="card" id="project1" onmouseover="mouseOver()"
                         onmouseout="mouseOut()">
                         <img id="project1a" src="6ruirf.gif" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div data-tilt data-tilt-scale="1.1" class="card" id="project2" onmouseover="mouseOver()"
+                    <div data-tilt class="card" id="project2" onmouseover="mouseOver()"
                         onmouseout="mouseOut()">
                         <img id="project2a" src="6ruirf.gif" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div data-tilt data-tilt-glare data-tilt-max-glare="0.8" class="card" id="project3"
+                    <div data-tilt class="card" id="project3"
                         onmouseover="mouseOver()" onmouseout="mouseOut()">
                         <img id="project3a" src="6ruirf.gif" class="card-img-top" alt="...">
                         <div class="card-body">
