--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zainab's Portfolio</title>
-
+    <link rel="icon" href="z.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
@@ -28,6 +28,9 @@
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,11 +44,11 @@
 </head>
 
 <body>
-    <section id="title" class="section1">
+    <section id="title" class="section2">
         <div class="container-fluid">
             <!-- Nav Bar -->
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="index.html">Zainab's Portfolio</a>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a data-tilt style="color:#4c0271 ;" class="navbar-brand" href="index.html">Zainab's Portfolio</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -54,21 +57,45 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">About</a>
+                            <a data-tilt class="nav-link navCol" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#work">Work</a>
+                            <a data-tilt class="nav-link navCol" href="#work">Work</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#footer">Contact</a>
+                            <a data-tilt class="nav-link navCol" href="#footer">Contact</a>
                         </li>
                         <li class="nav-item resume">
-                            <a class="nav-link" href="https://olaolu.dev/">Resume</a>
+                            <a data-tilt style="color:#4c0271 ;" class="nav-link navCol"
+                                href="https://olaolu.dev/">Resume</a>
                         </li>
                     </ul>
                 </div>
             </nav>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-md-1 col-lg-1"></div>
+                <div class="col-md-5 col-lg-5">
+                    <h1 style="margin: 0ch;" class="title-heading">Full-Stack
+                        <br>Developer
+                    </h1>
+                    <br>
+                    <h3 class="big-desc">I'm a <span class="auto-type"></span></h3>
 
+
+                </div>
+
+
+                <div class="title-img col-md-5 col-lg-5">
+                    <img src="image.gif" alt="...">
+                </div>
+                <div class="col-md-1 col-lg-1"></div>
+            </div>
+            <br>
+
+            <br>
+            <br>
 
         </div>
 
@@ -77,8 +104,27 @@
 
 
     </section>
-    <section id="about" class="section2">
-
+    <section id="about" class="section1">
+        <div class="container-fluid">
+            <h1 class="big-heading">About Me</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda nobis eum quia sed maiores tempora
+                aperiam voluptate consectetur voluptates possimus, excepturi error temporibus aliquam nulla dolores vel
+                quas autem veritatis saepe quo, corporis corrupti odit. Inventore, eum. Commodi praesentium rerum
+                quisquam consequatur aperiam ea sit quibusdam, recusandae molestias sed obcaecati facere autem
+                distinctio omnis? Pariatur est qui doloremque suscipit quisquam? Error, hic? Quasi consequatur sed
+                voluptatem temporibus mollitia, cupiditate ab?</p>
+        </div>
+    </section>
+    <section id="about1" class="section2">
+        <div class="container-fluid">
+            <h1 class="title-heading">Skills</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda nobis eum quia sed maiores tempora
+                aperiam voluptate consectetur voluptates possimus, excepturi error temporibus aliquam nulla dolores vel
+                quas autem veritatis saepe quo, corporis corrupti odit. Inventore, eum. Commodi praesentium rerum
+                quisquam consequatur aperiam ea sit quibusdam, recusandae molestias sed obcaecati facere autem
+                distinctio omnis? Pariatur est qui doloremque suscipit quisquam? Error, hic? Quasi consequatur sed
+                voluptatem temporibus mollitia, cupiditate ab?</p>
+        </div>
     </section>
     <section id="work" class="section1">
         <br>
@@ -87,9 +133,8 @@
 
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <div data-tilt  class="card" id="project1" onmouseover="mouseOver()"
-                        onmouseout="mouseOut()">
-                        <img id="project1a" src="6ruirf.gif" class="card-img-top" alt="...">
+                    <div data-tilt class="card">
+                        <img src="6ruirf.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Disappearing Text Editor</h5>
                             <p class="card-text">An online text editor where if you stop writing for 10s, all the text
@@ -99,88 +144,129 @@
                             <a href="https://pisceszaiby.github.io/Disappearing-Text-Writing-App/"
                                 class="btn btn-primary codeBtn">View Project</a>
 
-                            <a href="#" class="btn btn-primary codeBtn">Source
+                            <a href="https://github.com/Pisceszaiby/Disappearing-Text-Writing-App"
+                                class="btn btn-primary codeBtn">Source
                                 Code</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div data-tilt class="card" id="project2" onmouseover="mouseOver()"
-                        onmouseout="mouseOut()">
-                        <img id="project2a" src="6ruirf.gif" class="card-img-top" alt="...">
+                    <div data-tilt class="card">
+                        <img src="project3.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Minigames</h5>
                             <p class="card-text">Minigames Ranging from Tic Tac Toe, Rock Paper Scissors, Deck of Cards
                                 and Custom Bingo!
                             </p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+
+                            <a href="https://pisceszaiby.github.io/Disappearing-Text-Writing-App/"
+                                class="btn btn-primary codeBtn">View Project</a>
+
+                            <a href="https://github.com/Pisceszaiby/Disappearing-Text-Writing-App"
+                                class="btn btn-primary codeBtn">Source
+                                Code</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div data-tilt class="card" id="project3"
-                        onmouseover="mouseOver()" onmouseout="mouseOut()">
-                        <img id="project3a" src="6ruirf.gif" class="card-img-top" alt="...">
+                    <div data-tilt class="card">
+                        <img src="6ruirf.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Automated Amazon Price Tracker</h5>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.
                             </p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+
+                            <a href="https://pisceszaiby.github.io/Disappearing-Text-Writing-App/"
+                                class="btn btn-primary codeBtn">View Project</a>
+
+                            <a href="https://github.com/Pisceszaiby/Disappearing-Text-Writing-App"
+                                class="btn btn-primary codeBtn">Source
+                                Code</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div data-tilt class="card" id="project4" onmouseover="mouseOver()" onmouseout="mouseOut()">
-                        <img id="project4a" src="6ruirf.gif" class="card-img-top" alt="...">
+                    <div data-tilt class="card">
+                        <img src="project2.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Website Landing Page</h5>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.
                             </p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+
+                            <a href="https://pisceszaiby.github.io/Disappearing-Text-Writing-App/"
+                                class="btn btn-primary codeBtn">View Project</a>
+
+                            <a href="https://github.com/Pisceszaiby/Disappearing-Text-Writing-App"
+                                class="btn btn-primary codeBtn">Source
+                                Code</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div data-tilt class="card" id="project5" onmouseover="mouseOver()" onmouseout="mouseOut()">
-                        <img id="project5a" src="6ruirf.gif" class="card-img-top" alt="...">
+                    <div data-tilt class="card" ">
+                        <img  src=" project3.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Ecommerce Webapp</h5>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.
                             </p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+
+                            <a href="https://pisceszaiby.github.io/Disappearing-Text-Writing-App/"
+                                class="btn btn-primary codeBtn">View Project</a>
+
+                            <a href="https://github.com/Pisceszaiby/Disappearing-Text-Writing-App"
+                                class="btn btn-primary codeBtn">Source
+                                Code</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div data-tilt class="card" id="project6" onmouseover="mouseOver()" onmouseout="mouseOut()">
-                        <img id="project6a" src="6ruirf.gif" class="card-img-top" alt="...">
+                    <div data-tilt class="card">
+                        <img src="project2.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Blog Web App</h5>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.
                             </p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+
+                            <a href="https://pisceszaiby.github.io/Disappearing-Text-Writing-App/"
+                                class="btn btn-primary codeBtn">View Project</a>
+
+                            <a href="https://github.com/Pisceszaiby/Disappearing-Text-Writing-App"
+                                class="btn btn-primary codeBtn">Source
+                                Code</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div data-tilt class="card" id="project7" onmouseover="mouseOver()" onmouseout="mouseOut()">
-                        <img id="project7a" src="6ruirf.gif" class="card-img-top" alt="...">
+                    <div data-tilt class="card">
+                        <img src="6ruirf.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Keeper MERN App</h5>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.
                             </p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+
+                            <a href="https://pisceszaiby.github.io/Disappearing-Text-Writing-App/"
+                                class="btn btn-primary codeBtn">View Project</a>
+
+                            <a href="https://github.com/Pisceszaiby/Disappearing-Text-Writing-App"
+                                class="btn btn-primary codeBtn">Source
+                                Code</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div data-tilt class="card" id="project8" onmouseover="mouseOver()" onmouseout="mouseOut()">
-                        <img id="project8a" src="6ruirf.gif" class="card-img-top" alt="...">
+                    <div data-tilt class="card">
+                        <img src="project3.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">OddSimon</h5>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.
                             </p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+
+                            <a href="https://pisceszaiby.github.io/Disappearing-Text-Writing-App/"
+                                class="btn btn-primary codeBtn">View Project</a>
+
+                            <a href="https://github.com/Pisceszaiby/Disappearing-Text-Writing-App"
+                                class="btn btn-primary codeBtn">Source
+                                Code</a>
                         </div>
                     </div>
                 </div>
@@ -194,8 +280,8 @@
     <section id="contact" class="section2">
 
     </section>
-    <section id="footer" class="section1">
-        <h1 class="big-heading">Contact Me</h1>
+    <section id="footer" class="section2">
+        <h1 style="text-align: center;" class="title-heading">Contact Me</h1>
         <a href="index.html"> <i class="fa-brands fa-twitter"></i></a>
         <a href="index.html"> <i class="fa-brands fa-facebook"></i></a>
         <a href="index.html"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
@@ -205,7 +291,15 @@
 
         <p>Happy Productivity! </p>
 
-
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script>
+            var typed = new Typed(".auto-type", {
+                strings: ["Quirky, Little Nerdausaurus!!"],
+                typeSpeed: 100,
+                backSpeed: 50,
+                loop: true
+            })
+        </script>
         <script src="vanilla-tilt.js"></script>
 
 </body>
